--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_USER=postgres
 DB_PASSWORD=12345678
-DB_HOST=localhost
-DB_NAME=bioskuy_test
+DB_HOST=db
+DB_NAME=bioskuy
 DB_PORT=5432
 DRIVER_NAME=postgres
 SECRET_KEY=ENIGMACAMP
